--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -4,9 +4,9 @@
 @include font-face("Actay", 700);
 
 :root {
-  --primary: #c44e47;
+  --primary: #189DD9;
   --primary-light: #f4736b;
-  --text-color: #31424f;
+  --text-color: #393939;
   --gray: #7c7c7c;
   --font-primary: "Actay", sans-serif;
   --transition-ease: 0.3s ease;
