--- a/assets/scss/components/_index.scss
+++ b/assets/scss/components/_index.scss
@@ -1,4 +1,4 @@
-// @import "TheHeader";
+@import "TheHeader";
 // @import "TheForm";
-// @import "TheFooter";
+@import "TheFooter";
 // @import "TheModal";
