--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -1,14 +1,118 @@
 main {
+  padding-left: 265px;
   max-width: 100%;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 section {
   padding: 50px 0;
 
-  @include media("lg") {
-    padding: 30px 0;
+  @include media("sm") {
+    padding: 35px 0;
   }
 }
 
-// @include show(".endoscopy");
+// ** hero ** //
+.hero {
+  position: relative;
+  padding-top: 200px;
+
+  .container {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    gap: 20px;
+  }
+
+  &__img {
+    position: absolute;
+    top: -90px;
+    left: -25px;
+    min-width: 510px;
+    width: 510px;
+    height: 510px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -28%;
+      left: -14%;
+      width: 820px;
+      height: 790px;
+      background: url(../img/hero-bg.png) center/contain no-repeat;
+      pointer-events: none;
+    }
+
+    img {
+      width: 100%;
+      height: 100%;
+    }
+
+    &-badge {
+      position: absolute;
+      top: 70px;
+      right: -30px;
+      z-index: 2;
+      padding: 14px 30px 10px;
+      color: #fff;
+      font-weight: 700;
+      font-size: 32px;
+      line-height: 100%;
+      background: var(--primary);
+      border-radius: 9999px;
+
+      &::before {
+        content: "new";
+        position: absolute;
+        top: 2px;
+        left: 0;
+        width: 100%;
+        font-weight: 700;
+        font-size: 78px;
+        line-height: 86%;
+        color: #fff;
+        text-align: center;
+        text-transform: uppercase;
+        opacity: 0.1;
+      }
+    }
+  }
+
+  &__content {
+    position: relative;
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+
+  &__title {
+    max-width: 480px;
+    font-weight: 700;
+    text-transform: uppercase;
+    line-height: 1;
+
+    span:nth-child(1) {
+      font-size: 64px;
+    }
+
+    span:nth-child(2) {
+      font-size: 104px;
+    }
+  }
+
+  &__subtitle {
+    margin-top: 30px;
+    color: var(--primary);
+    font-weight: 700;
+    font-size: 46px;
+  }
+
+  &__logo {
+    width: 528px;
+    height: auto;
+  }
+}
+
+// @include show(".hero");
