--- a/assets/scss/components/_TheHeader.scss
+++ b/assets/scss/components/_TheHeader.scss
@@ -1,9 +1,60 @@
-/* Styles for the TheHeader component */
 .header {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  transition: var(--transition-ease);
+  top: 50%;
+  left: 50%;
+  transform: translate(calc(-50% - 600px), -50%);
+  width: 200px;
+  // background: red;
+  // transition: var(--transition-ease);
   z-index: 10;
+
+  &__menu {
+    position: relative;
+    padding-left: 24px;
+    --position: 5px;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      pointer-events: none;
+    }
+
+    &::before {
+      top: 50%;
+      left: 0;
+      transform: translate(0, -50%);
+      height: 130%;
+      width: 1px;
+      background: linear-gradient(transparent, #000, transparent);
+    }
+
+    &::after {
+      top: 5px;
+      left: -5px;
+      z-index: 2;
+      width: 12px;
+      height: 12px;
+      background: var(--primary);
+      border-radius: 50%;
+    }
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 50px;
+
+    &-item {
+      font-weight: 400;
+      font-size: 20px;
+      transition: var(--transition-ease);
+
+      &.active,
+      &:hover {
+        color: var(--primary);
+      }
+    }
+  }
 }
