--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -1,7 +1,11 @@
 main {
   padding-left: 265px;
   max-width: 100%;
-  // overflow: hidden;
+  overflow: hidden;
+
+  @include media("xl") {
+    padding-left: 0;
+  }
 }
 
 section {
@@ -12,17 +16,70 @@ section {
   }
 }
 
+.section__header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-self: flex-start;
+  gap: 15px;
+
+  &-title {
+    max-width: 750px;
+    font-weight: 700;
+    font-size: 42px;
+
+    @include media("lg") {
+      max-width: 600px;
+    }
+    @include media("sm") {
+      font-size: 32px;
+    }
+    @include media("xs") {
+      font-size: 24px;
+    }
+  }
+
+  &-desc {
+    max-width: 735px;
+
+    @include media("lg") {
+      max-width: 600px;
+    }
+    @include media("sm") {
+      font-size: 16px;
+    }
+    @include media("xs") {
+      font-size: 14px;
+    }
+
+    span {
+      color: var(--primary);
+    }
+  }
+}
+
 // ** hero ** //
 .hero {
   position: relative;
   padding-top: 200px;
 
+  @include media("md") {
+    padding-top: 20px;
+  }
+  @include media("sm") {
+    padding-top: 0;
+    margin-top: -50px;
+  }
+
   .container {
     position: relative;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-end;
-    gap: 20px;
+    flex-direction: column;
+    align-items: flex-end;
+
+    @include media("md") {
+      align-items: center;
+    }
   }
 
   &__img {
@@ -32,6 +89,23 @@ section {
     min-width: 510px;
     width: 510px;
     height: 510px;
+
+    @include media("xl") {
+      transform: scale(0.9);
+    }
+    @include media("lg") {
+      left: -100px;
+      transform: scale(0.8);
+    }
+    @include media("md") {
+      position: relative;
+      top: 0;
+      left: 0;
+      max-width: 100%;
+    }
+    @include media("sm") {
+      transform: scale(0.6);
+    }
 
     &::after {
       content: "";
@@ -85,6 +159,11 @@ section {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
+    @include media("md") {
+      text-align: center;
+      align-items: center;
+    }
   }
 
   &__title {
@@ -92,13 +171,35 @@ section {
     font-weight: 700;
     text-transform: uppercase;
     line-height: 1;
+    display: flex;
+    flex-direction: column;
 
     span:nth-child(1) {
       font-size: 64px;
+
+      @include media("lg") {
+        font-size: 48px;
+      }
+      @include media("sm") {
+        font-size: 40px;
+      }
+      @include media("xs") {
+        font-size: 36px;
+      }
     }
 
     span:nth-child(2) {
       font-size: 104px;
+
+      @include media("lg") {
+        font-size: 80px;
+      }
+      @include media("sm") {
+        font-size: 60px;
+      }
+      @include media("xs") {
+        font-size: 52px;
+      }
     }
   }
 
@@ -107,12 +208,265 @@ section {
     color: var(--primary);
     font-weight: 700;
     font-size: 46px;
+
+    @include media("lg") {
+      font-size: 32px;
+    }
+    @include media("sm") {
+      font-size: 24px;
+    }
+    @include media("xs") {
+      font-size: 20px;
+    }
   }
 
   &__logo {
     width: 528px;
     height: auto;
+
+    @include media("lg") {
+      width: 380px;
+    }
+    @include media("md") {
+      width: 300px;
+    }
+    @include media("sm") {
+      margin-top: 10px;
+      width: 220px;
+    }
   }
 }
 
-// @include show(".hero");
+// ** about ** //
+.about {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 420px;
+    right: 50%;
+    z-index: -1;
+    transform: translate(calc(50% + 400px), 0);
+    width: 563px;
+    height: 291px;
+    background-image: url('data:image/svg+xml,<svg width="446" height="291" viewBox="0 0 446 291" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M562.742 145.339C561.791 150.772 559.246 151.297 555.443 149.954C550.807 148.333 520.175 148.333 515.846 149.749C506.178 152.918 496.554 152.772 486.901 150.465C480.027 148.829 473.665 149.72 467.449 152.86C460.487 156.394 453.95 155.722 448.216 150.26C442.542 144.857 436.984 145.077 430.914 149.647C427.418 152.261 423.587 154.554 419.608 156.32C404.822 162.848 392.521 159.708 382.459 147.062C380.163 144.215 378.232 140.856 373.844 141.689C369.266 142.565 370.393 146.61 369.632 149.662C369.442 150.377 368.652 150.947 368.521 151.662C366.224 162.746 362.29 167.681 355.372 167.959C348.761 168.222 343.116 162.089 340.893 152.013C340 147.939 339.591 143.733 338.626 139.674C337.733 135.862 335.847 132.81 331.166 133.453C327.203 138.053 326.384 143.704 325.916 149.516C325.214 158.131 325.024 166.878 321.192 174.822C318.895 179.568 316.234 184.664 309.944 183.934C304.036 183.248 301.228 178.283 300.043 173.128C297.308 161.169 294.734 149.151 293.286 136.899C292.832 133.059 294.368 126.371 289.688 126.108C283.823 125.816 285.461 132.942 284.934 136.709C281.892 158.482 279.406 180.342 276.817 202.173C276.32 206.378 275.75 210.569 273.527 214.176C271.596 217.315 269.168 220.294 264.971 219.871C261.183 219.477 259.12 216.629 257.965 213.285C254.689 203.837 254.192 193.878 253.665 184.036C252.334 159.475 250.784 134.942 247.551 110.541C247.259 108.351 247.654 105.051 244.422 105.299C241.628 105.518 242.783 108.599 242.564 110.498C236.86 159.153 235.222 208.16 230.395 256.888C229.225 268.775 227.836 280.647 221.123 291H216.486C211.952 285.597 210.373 279.245 210.27 272.265C209.685 233.495 209.13 194.74 208.325 155.97C207.55 118.792 206.468 81.643 205.546 44.4648C199.974 43.0192 201.232 47.6044 200.998 50.189C198.233 80.6792 195.542 111.199 192.983 141.733C191.389 161.023 190.131 180.356 188.61 199.676C188.186 204.903 186.898 209.985 184.514 214.716C183.052 217.593 181.253 220.367 177.567 219.885C174.262 219.447 171.849 217.272 171.03 214.001C169.508 207.955 167.709 201.866 167.183 195.689C164.857 168.353 163 140.973 160.85 113.623C160.455 108.409 159.578 103.24 158.715 98.0855C158.525 96.9465 157.647 95.3256 156.74 95.0481C154.883 94.464 154.064 96.4646 153.596 97.7788C152.747 100.232 152.133 102.817 151.826 105.401C149.603 125.699 147.482 146.011 145.288 166.279C144.835 170.441 144.235 174.559 142.656 178.502C141.12 182.371 138.604 184.387 134.48 184.343C130.531 184.299 128.425 181.86 127.05 178.516C122.925 168.441 122.969 157.533 120.922 147.048C119.371 139.104 117.748 131.175 116.168 123.231C115.7 120.865 115.247 118.149 112.322 118.252C109.923 118.339 109.265 121.055 108.885 122.968C107.071 132.197 105.609 141.499 103.868 150.742C103.327 153.531 102.625 156.408 101.426 158.949C96.8478 168.528 87.458 169.653 81.1251 161.198C78.5217 157.722 76.9128 153.458 74.9676 149.486C71.4574 142.346 68.4737 141.397 62.5795 146.508C56.6707 151.633 50.4694 152.874 43.2882 149.968C38.3008 147.953 14.8138 149.588 9.85567 152.217C6.74335 151.181 5.47487 150.723 2.5936 149.628C0.399734 148.795 0.0292515 146.341 0 143.932C0 142.896 3.36512 142.834 5.18719 142.896C20.23 143.414 34.8637 137.907 42.5715 140.594C48.1878 142.565 52.7656 141.849 57.7676 138.447C68.5761 131.131 76.7959 134.008 82.7047 146.084C84.5621 149.91 85.1033 156.905 89.2278 156.598C94.4784 156.218 93.1328 149.107 94.4345 144.901C97.4767 135.191 98.7199 124.998 102.186 115.36C104.278 109.534 107.861 106.029 114.004 105.912C120.527 105.825 122.487 110.658 123.891 116.017C127.679 130.489 128.893 145.398 131.584 160.044C132.067 162.658 131.511 166.849 135.27 166.674C138.429 166.528 137.829 162.585 138.078 160.161C140.549 137.001 142.977 113.856 145.288 90.682C145.727 86.2282 146.385 81.8766 147.818 77.6419C149.53 72.6478 151.782 68.3254 157.969 68.7927C164.594 69.2746 166.232 74.3125 166.89 79.7446C168.06 89.3531 169.04 98.9908 169.903 108.614C172.083 132.854 174.145 157.109 176.339 181.349C176.529 183.496 175.578 187.117 178.591 187.19C182.072 187.307 181.531 183.408 181.721 181.057C183.14 162.527 184.324 143.981 185.758 125.465C187.279 105.723 188.99 85.9945 190.613 66.2665C192.017 49.3567 193.758 32.4761 194.694 15.5517C195.06 8.79075 196.639 3.46081 202.563 0H207.199C210.841 2.75989 213.21 6.22069 213.196 11.0249C215.404 24.7806 214.205 38.6822 214.453 52.4962C215.433 106.146 215.682 159.825 216.325 213.504C216.413 220.805 217.32 228.092 217.89 235.408C218.037 237.204 217.993 239.789 220.114 239.833C222.746 239.906 222.702 237.263 222.863 235.16C225.335 206.247 228.085 177.363 230.278 148.421C231.858 127.291 234.652 106.292 235.295 85.06C235.485 79.0437 235.851 70.253 244.319 69.8733C252.524 69.4936 253.563 77.7879 255.171 83.9356C258.857 97.9686 258.082 112.527 259.237 126.838C260.905 147.661 264.02 168.455 262.894 189.468C262.748 192.287 263.552 195.339 266.419 195.28C269.358 195.222 269.914 191.644 270.163 189.176C271.479 175.903 272.4 162.585 273.746 149.311C274.697 139.936 275.852 130.576 277.315 121.289C278.821 111.812 284.086 104.715 289.498 105.182C298.332 105.942 299.443 114.031 301.388 120.369C304.591 130.883 305.41 141.922 306.186 152.903C306.566 158.35 306.566 163.914 309.915 169.039C313.645 165.9 313.191 161.504 313.776 157.635C315.093 149.092 316.16 140.506 319.992 132.635C322.596 127.276 325.843 122.676 332.688 123.1C337.953 123.903 340.454 128.021 342.575 132.182C345.295 137.527 347.196 143.193 348.571 149.078C349.302 152.188 349.653 156.598 354.041 156.51C357.858 156.437 359.248 152.714 360.418 149.516C361.559 146.332 362.334 143.003 363.489 139.82C367.043 130.007 375.453 127.393 383.322 133.979C390.269 139.79 396.69 146.113 405.992 148.201C412.939 149.764 418.599 148.274 423.806 143.572C437.408 131.248 438.768 131.131 454.154 142.025C457.928 144.697 461.833 145.938 465.533 143.12C473.519 137.074 482.66 137.848 491.494 138.462C501.82 139.177 512.014 139.104 522.281 137.775C525.528 137.352 554.873 138.111 558.193 138.301C562.975 138.564 563.502 140.564 562.683 145.383L562.742 145.339Z" fill="url(%23paint0_linear_1_261)" /><defs><linearGradient id="paint0_linear_1_261" x1="6.22463" y1="146.003" x2="566.441" y2="145.484" gradientUnits="userSpaceOnUse"><stop stop-color="white" /><stop offset="0.08" stop-color="%23E5087E" /><stop offset="0.29" stop-color="%237260A7" /><stop offset="0.42" stop-color="%23189DD9" /><stop offset="0.73" stop-color="%23AD2886" /><stop offset="0.91" stop-color="%23AC2B87" /><stop offset="1" stop-color="white" /></linearGradient></defs></svg>');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    @include media("lg") {
+      transform: translate(calc(50% + 400px), -20px) scale(0.8);
+    }
+    @include media("sm") {
+      transform: translate(calc(50% + 300px), -20px) scale(0.8);
+    }
+    @include media("xs") {
+      top: 380px;
+      transform: translate(calc(50% + 200px), 0) scale(0.6);
+    }
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 50px;
+
+    @include media("sm") {
+      gap: 35px;
+    }
+  }
+
+  &__block {
+    padding: 45px 50px 80px;
+    width: 100%;
+    color: #fff;
+    text-align: center;
+    background: var(--primary);
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    @include media("lg") {
+      padding: 40px;
+    }
+    @include media("sm") {
+      padding: 30px 30px;
+      border-radius: 40px;
+    }
+    @include media("xs") {
+      padding: 30px 20px;
+      border-radius: 30px;
+    }
+
+    &-title {
+      font-weight: 700;
+      font-size: 64px;
+      line-height: 1;
+
+      @include media("lg") {
+        font-size: 48px;
+      }
+      @include media("sm") {
+        font-size: 40px;
+      }
+      @include media("xs") {
+        font-size: 36px;
+      }
+    }
+
+    &-desc {
+      @include media("xs") {
+        font-size: 14px;
+      }
+    }
+
+    svg {
+      margin: -25px 0 -10px;
+      width: 100%;
+
+      @include media("xs") {
+        margin: -30px 0 -25px;
+      }
+    }
+  }
+
+  &__ticker {
+    position: relative;
+    margin-top: 55px;
+    padding: 10px 10px 2px;
+    width: 100%;
+    height: 65px;
+    background: var(--text-color);
+    border-radius: 12px;
+    overflow: hidden;
+
+    @include media("md") {
+      margin-top: 0;
+    }
+    @include media("sm") {
+      height: 50px;
+    }
+    @include media("xs") {
+      margin-left: -16px;
+      width: calc(100% + 32px);
+      border-radius: 0;
+    }
+
+    &-content {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      white-space: nowrap;
+      animation: scroll 15s linear infinite;
+
+      @include media("sm") {
+        animation: scroll 10s linear infinite;
+      }
+    }
+
+    span {
+      font-weight: 700;
+      font-size: 42px;
+      line-height: 100%;
+      color: #fff;
+      animation: flash 1s infinite alternate;
+
+      &::after {
+        content: "*";
+        color: var(--primary);
+      }
+
+      @include media("sm") {
+        font-size: 36px;
+      }
+    }
+
+    @keyframes scroll {
+      0% {
+        transform: translateX(0%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
+    @keyframes flash {
+      from {
+        opacity: 1;
+      }
+      to {
+        opacity: 0.3;
+      }
+    }
+  }
+
+  .advantages {
+    margin-top: 75px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: flex-start;
+    gap: 60px;
+
+    @include media("lg") {
+      margin-top: 50px;
+      gap: 80px 20px;
+    }
+    @include media("xs") {
+      gap: 60px;
+    }
+
+    &__item {
+      position: relative;
+      padding: 20px 20px 60px;
+      color: #fff;
+      background: var(--text-color);
+      border-radius: 20px;
+      flex: 1 0 280px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+      @include media("sm") {
+        padding-bottom: 30px;
+      }
+
+      &-icon {
+        margin-top: -85px;
+        --icon-size: 100px;
+
+        @include media("xs") {
+          margin-top: -70px;
+          --icon-size: 80px;
+        }
+      }
+
+      &-title {
+        margin-top: 5px;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.2;
+      }
+
+      &-desc {
+        margin-top: 10px;
+
+        @include media("xs") {
+          font-size: 14px;
+        }
+      }
+    }
+  }
+}
+
+// ** assortment ** //
+.assortment{
+  //
+}
+
+// @include show(".about");
