--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -36,6 +36,11 @@ section {
     }
     @include media("xs") {
       font-size: 24px;
+      text-wrap: pretty;
+    }
+
+    span {
+      color: var(--primary);
     }
   }
 
@@ -465,8 +470,238 @@ section {
 }
 
 // ** assortment ** //
-.assortment{
-  //
+.assortment {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 50px;
+
+    @include media("sm") {
+      gap: 35px;
+    }
+  }
+
+  &__title {
+    font-weight: 700;
+    font-size: 66.5px;
+    text-transform: uppercase;
+    color: var(--primary);
+
+    @include media("2xl") {
+      font-size: 60px;
+    }
+    @include media("lg") {
+      font-size: 48px;
+    }
+    @include media("sm") {
+      font-size: 32px;
+    }
+    @include media("xs") {
+      font-size: 28px;
+    }
+  }
+
+  &__products {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 80px;
+
+    @include media("md") {
+      gap: 40px;
+    }
+  }
+
+  &__product {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 38px;
+
+    @include media("sm") {
+      gap: 20px;
+    }
+
+    &-header {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 14px;
+
+      @include media("sm") {
+        flex-wrap: wrap;
+      }
+    }
+
+    &-title {
+      margin-top: 15px;
+      font-weight: 700;
+      font-size: 42px;
+
+      @include media("sm") {
+        margin-top: 5px;
+        font-size: 32px;
+      }
+      @include media("xs") {
+        font-size: 24px;
+      }
+    }
+
+    &-desc {
+      max-width: 465px;
+    }
+
+    &-level {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 14px;
+
+      @include media("xs") {
+        gap: 10px;
+      }
+
+      span {
+        padding: 14px 32px 5px;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 95%;
+        color: #fff;
+        background: var(--primary);
+        border-radius: 20px;
+
+        @include media("sm") {
+          padding: 14px 20px 5px;
+          font-size: 32px;
+          border-radius: 15px;
+        }
+        @include media("xs") {
+          padding: 8px 10px 3px;
+          font-size: 20px;
+          border-radius: 10px;
+        }
+      }
+
+      svg {
+        width: 60px;
+
+        @include media("sm") {
+          width: 45px;
+        }
+        @include media("xs") {
+          width: 35px;
+        }
+      }
+    }
+
+    &-img {
+      position: absolute;
+      bottom: -50px;
+      right: 0;
+      width: 100%;
+      max-width: 475px;
+      max-height: 365px;
+      object-fit: contain;
+
+      @include media("lg") {
+        max-width: 380px;
+      }
+      @include media("md") {
+        position: relative;
+        bottom: 0;
+        width: 100%;
+        max-width: 100%;
+      }
+    }
+
+    &-details {
+      width: 100%;
+      font-size: 24px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 20px;
+
+      @include media("sm") {
+        font-size: 20px;
+        gap: 10px;
+      }
+      @include media("xs") {
+        font-size: 16px;
+      }
+
+      span {
+        margin-right: 5px;
+        color: var(--primary);
+        font-weight: 700;
+      }
+    }
+  }
 }
 
-// @include show(".about");
+// ** buy ** //
+.buy {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 50px;
+
+  @include media("sm") {
+    gap: 35px;
+  }
+
+  &__map {
+    position: relative;
+    margin-left: -265px;
+    height: 554px;
+    width: calc(100% + 265px);
+
+    @include media("xl") {
+      margin-left: 0;
+      width: 100%;
+      height: 400px;
+    }
+    @include media("sm") {
+      height: 340px;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 2;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(to left, transparent, transparent, #fff);
+      pointer-events: none;
+
+      @include media("lg") {
+        display: none;
+      }
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  }
+}
+
+// ** partnership ** //
+.partnership {
+  .section__header-title {
+    max-width: 785px;
+  }
+  .section__header-desc {
+    max-width: 940px;
+  }
+}
+
+// @include show(".assortment");
