--- a/assets/scss/components/_TheFooter.scss
+++ b/assets/scss/components/_TheFooter.scss
@@ -1,17 +1,135 @@
-/* Styles for the TheFooter component */
 .footer {
-  padding: 50px 0;
-  background-color: #393939;
-  background-image: url("../img/bg.png");
-  background-position: center;
-  background-size: 256px auto;
-  background-repeat: repeat;
+  width: 100%;
 
-  @include media("xl") {
-    padding: 50px 0 110px;
+  @include media("1280px", min-width) {
+    --content-width: 1280px;
   }
 
-  .container {
-    background: green;
+  &__top {
+    padding-top: 20px;
+    padding-bottom: 50px;
+    width: 100%;
+    background-color: #111;
+    background-image: url("../img/bg.png");
+    background-position: center;
+    background-size: 256px auto;
+    background-repeat: repeat;
+
+    .container {
+      display: flex;
+      align-items: flex-start;
+      justify-content: space-between;
+      gap: 20px;
+
+      @include media("md") {
+        flex-direction: column;
+        align-items: center;
+        gap: 30px;
+      }
+    }
+
+    &-item {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 20px;
+
+      @include media("md") {
+        align-items: center;
+      }
+
+      &:last-child {
+        margin-top: 20px;
+        align-items: flex-end;
+        gap: 25px;
+
+        @include media("lg") {
+          margin-top: 5px;
+          gap: 15px;
+        }
+        @include media("sm") {
+          gap: 10px;
+        }
+      }
+    }
+
+    &-logo {
+      width: 170px;
+      display: block;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    &-desc {
+      width: 100%;
+      max-width: 445px;
+      font-weight: 400;
+      font-size: 10px;
+      color: #949494;
+
+      @include media("lg") {
+        max-width: 320px;
+      }
+      @include media("md") {
+        text-align: center;
+      }
+    }
+
+    &-link {
+      font-weight: 700;
+      font-size: 42px;
+      color: #fff;
+      transition: color var(--transition-ease);
+
+      &:hover {
+        color: var(--primary);
+      }
+
+      @include media("lg") {
+        font-size: 32px;
+      }
+      @include media("sm") {
+        font-size: 24px;
+      }
+    }
+  }
+
+  &__bottom {
+    padding: 10px 0;
+    width: 100%;
+    color: #fff;
+    background: var(--primary);
+
+    @include media("sm") {
+      padding: 15px 0;
+    }
+
+    .container {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+
+      @include media("sm") {
+        flex-direction: column-reverse;
+      }
+    }
+
+    &-item {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 70px;
+
+      @include media("lg") {
+        gap: 40px;
+      }
+    }
+
+    &-link {
+      text-decoration: underline;
+    }
   }
 }
