--- a/assets/scss/components/_TheHeader.scss
+++ b/assets/scss/components/_TheHeader.scss
@@ -4,10 +4,11 @@
   left: 50%;
   transform: translate(calc(-50% - 600px), -50%);
   width: 200px;
-  // background: red;
-  // transition: var(--transition-ease);
   z-index: 10;
 
+  @media screen and (max-height: 800px) {
+    top: 35%;
+  }
   @include media("2xl") {
     transform: translate(calc(-50% - 550px), -50%);
   }
@@ -21,7 +22,6 @@
   &__menu {
     position: relative;
     padding-left: 24px;
-    --dot-position: 5px;
 
     &::before,
     &::after {
@@ -39,15 +39,15 @@
       background: linear-gradient(transparent, #000, transparent);
     }
 
-    &::after {
-      top: var(--dot-position);
-      left: -5px;
-      z-index: 2;
-      width: 12px;
-      height: 12px;
-      background: var(--primary);
-      border-radius: 50%;
-    }
+    // &::after {
+    //   top: var(--dot-position);
+    //   left: -5px;
+    //   z-index: 2;
+    //   width: 12px;
+    //   height: 12px;
+    //   background: var(--primary);
+    //   border-radius: 50%;
+    // }
   }
 
   .menu {
@@ -57,14 +57,192 @@
     gap: 50px;
 
     &-item {
+      position: relative;
       font-weight: 400;
       font-size: 20px;
       transition: var(--transition-ease);
 
-      &.active,
+      &::before {
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: -30px;
+        margin-top: -2px;
+        transform: translate(0, -50%);
+        width: 12px;
+        height: 12px;
+        background: var(--primary);
+        border-radius: 50%;
+        transition: var(--transition-ease);
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      &.active {
+        color: var(--primary);
+
+        &::before {
+          opacity: 1;
+        }
+      }
+
       &:hover {
         color: var(--primary);
       }
     }
   }
+}
+
+.mobile__menu {
+  position: fixed;
+  bottom: 0.9375rem;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translate(-50%);
+  display: none;
+  z-index: 10;
+}
+
+@media screen and (max-width: 1279px) {
+  .mobile__menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 475px) {
+  .mobile__menu {
+    width: 100%;
+    max-width: calc(100% - 1.875rem);
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .mobile__menu {
+    max-width: calc(100% - 0.625rem);
+  }
+}
+
+.mobile__menu-tabs {
+  padding: 1rem 1.25rem;
+  width: 100%;
+  background: var(--primary);
+  border-radius: 0.9375rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  gap: 2.5rem;
+}
+
+@media screen and (max-width: 475px) {
+  .mobile__menu-tabs {
+    gap: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  .mobile__menu-tabs {
+    padding: 0.9375rem;
+    gap: 0.625rem;
+  }
+}
+
+.mobile__menu-tab {
+  color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.mobile__menu-tab svg > *,
+.mobile__menu-tab span {
+  -webkit-transition: var(--transition-ease);
+  transition: var(--transition-ease);
+}
+
+.mobile__menu-tab span {
+  margin-top: 0.3125rem;
+  font-size: 0.875rem;
+  text-align: center;
+}
+
+.mobile__menu-content {
+  position: absolute;
+  padding: 3.75rem 2.375rem;
+  bottom: 5.625rem;
+  width: 100%;
+  min-height: 21.5625rem;
+  max-height: calc(100vh - 7.5rem);
+  color: #fff;
+  background: var(--primary);
+  border-radius: 0.9375rem;
+  display: none;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-transition: var(--transition-ease);
+  transition: var(--transition-ease);
+  overflow: auto;
+  opacity: 0;
+  -webkit-transform: translateY(1.25rem);
+  -ms-transform: translateY(1.25rem);
+  transform: translateY(1.25rem);
+  -webkit-transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.3s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease,
+    -webkit-transform 0.3s ease;
+  pointer-events: none;
+}
+
+.mobile__menu-content.show {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+  -ms-transform: translateY(0);
+  transform: translateY(0);
+  pointer-events: auto;
+}
+
+.mobile__menu-content .menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  gap: 2.1875rem;
+}
+
+.mobile__menu-content .menu .sub-menu,
+.mobile__menu-content .menu .icon-plus {
+  display: none;
+}
+
+.mobile__menu-content #content {
+  width: 100%;
+}
+
+.mobile__menu-close {
+  position: absolute;
+  top: 1.375rem;
+  right: 1.5625rem;
 }
